--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+app-root {
+    height: 100vh;
+    color: #54D2D7;
+    text-transform: uppercase;
+    font-family: -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+        Roboto,
+        Oxygen-Sans,
+        Ubuntu,
+        Cantarell,
+        Helvetica,
+        sans-serif;
+    font-size: 2.5em;
+    text-shadow: 4px 4px 10px rgba(0,0,0,0.2);
+  }
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #0B6E72;
+  }
+
+  @keyframes dots {
+    50% {
+      transform: translateY(-.4rem);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  .d {
+    animation: dots 1.5s ease-out infinite;
+  }
+  .d-2 {
+    animation-delay: .5s;
+  }
+  .d-3 {
+    animation-delay: 1s;
+  }
