--- a/src/app/Components/weather-widget-main/weather-widget-main.component.html
+++ b/src/app/Components/weather-widget-main/weather-widget-main.component.html
@@ -9,9 +9,9 @@
     <div class="weatherWidgetRow cloudDiv">
         <i class="fas fa-cloud fa-3x cloud"></i>
     </div>
-     <div class="weatherWidgetRow" style="font-size: 68px;">{{WeatherData.temp_celcius}}°</div>
-     <div class="weatherWidgetRow" style="font-size: 16px; margin-top: 24px;">{{WeatherData.temp_min}}° / {{WeatherData.temp_max}}°</div>
-     <div class="weatherWidgetRow" style="font-size: 12px; margin-top: 6px;">Feels Like: {{WeatherData.temp_feels_like}}°</div>
-     <div class="weatherWidgetRow" style="font-size: 46px; margin-top: 46px;">{{WeatherData.name}}</div>
-     <div class="weatherWidgetRow" style="font-size: 18px; margin-top: 4px;">Humidity: {{WeatherData.main.humidity}}%</div>
+     <div class="weatherWidgetRow" style="font-size: 72px; margin-top: 6px;">{{WeatherData.temp_celcius}}°</div>
+     <div class="weatherWidgetRow" style="font-size: 16px; margin-top: 40px;">MIN: &emsp; {{WeatherData.temp_min}}° / MAX: &emsp; {{WeatherData.temp_max}}°</div>
+     <div class="weatherWidgetRow" style="font-size: 14px; margin-top: 10px;">Feels Like: &emsp; {{WeatherData.temp_feels_like}}°</div>
+     <div class="weatherWidgetRow" style="font-size: 42px; margin-top: 86px;">{{WeatherData.name}}</div>
+     <div class="weatherWidgetRow" style="font-size: 16px; margin-top: 2px;">Humidity: {{WeatherData.main.humidity}}%</div>
 </div>
