--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,5 @@
     <h1>Angular Weather App</h1>
   </header>
   
-<app-weather-widget-main>Loading weather widget <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-weather-widget-main>
-
+  <app-weather-widget-main>Loading Weather Widget, Please Wait <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-weather-widget-main>
 </div>
