--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+}
+
+h1{
+  margin-top: 24px;
 }
 
 app-root {
     height: 100vh;
-    color: #54D2D7;
+    color: #39b0f5;
     text-transform: uppercase;
     font-family: -apple-system,
         BlinkMacSystemFont,
@@ -24,7 +29,7 @@ app-root {
   body {
     margin: 0;
     padding: 0;
-    background-color: #0B6E72;
+    background-color: #1f518a;
   }
 
   @keyframes dots {
