--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="app">
   <header>
-    <h1>Angular Weather App</h1>
+    <div class="searchBox">
+      <input class="inputSearch" type="text" placeholder="Search for a city ...">&emsp;
+  </div>
   </header>
   
   <app-weather-widget-main>Loading Weather Widget, Please Wait <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-weather-widget-main>
