--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
 }
 
 h1{
-  margin-top: 24px;
+  margin-top: 18px;
 }
 
 app-root {
@@ -29,7 +29,9 @@ app-root {
   body {
     margin: 0;
     padding: 0;
-    background-color: #1f518a;
+    background-image: url('../src/assets/background.jpg');
+    background-size: cover;
+    background-position: top center;
   }
 
   @keyframes dots {
