--- a/src/app/Components/weather-widget-main/weather-widget-main.component.css
+++ b/src/app/Components/weather-widget-main/weather-widget-main.component.css
@@ -61,3 +61,21 @@
     margin-top: 6px;
     text-shadow: 3px 10px rgba(0,0,0, 0.6);
 }
+
+header input{
+    height: 38px;
+    width: 320px;
+    border: none;
+    outline: none;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 16px 0px 16px 0px;
+    border-bottom: 3px solid #ff9307;
+    color: #313131;
+    font-size: 16px;
+    font-weight: 300;
+    transition: 0.2s ease-out;
+}
+
+header input:focus{
+    background-color: rgba(255, 255, 255, 0.85);
+}
