--- a/src/app/Components/weather-widget-main/weather-widget-main.component.html
+++ b/src/app/Components/weather-widget-main/weather-widget-main.component.html
@@ -1,17 +1,22 @@
+<div class="weatherCurrent">
+    <div class="searchBox">
+        <input class="inputSearch" type="text" placeholder="Search for a city ...">&emsp;
+    </div>
 
-<div class="wwidget">
-    <div *ngIf="WeatherData.isDay" class="weatherWidgetRow">
-        <i class="fas fa-3x fa-sun sun"></i>
+    <div class="wwidget">
+        <div *ngIf="WeatherData.isDay" class="weatherWidgetRow">
+            <i class="fas fa-3x fa-sun sun"></i>
+        </div>
+        <div *ngIf="!WeatherData.isDay" class="weatherWidgetRow">
+            <i class="fas fa-3x fa-moon moon"></i>
+        </div>
+        <div class="weatherWidgetRow cloudDiv">
+            <i class="fas fa-cloud fa-3x cloud"></i>
+        </div>
+        <div class="weatherWidgetRow" id="currentTemp">{{WeatherData.temp_celcius}}°</div>
+        <div class="weatherWidgetRow" style="font-size: 16px; margin-top: 40px;">MIN: &emsp; {{WeatherData.temp_min}}° / MAX: &emsp; {{WeatherData.temp_max}}°</div>
+        <div class="weatherWidgetRow" style="font-size: 14px; margin-top: 10px;">Feels Like: &emsp; {{WeatherData.temp_feels_like}}°</div>
+        <div class="weatherWidgetRow" style="font-size: 42px; margin-top: 86px;">{{WeatherData.name}}</div>
+        <div class="weatherWidgetRow" style="font-size: 16px; margin-top: 2px;">Humidity: {{WeatherData.main.humidity}}%</div>
     </div>
-    <div *ngIf="!WeatherData.isDay" class="weatherWidgetRow">
-        <i class="fas fa-3x fa-moon moon"></i>
-    </div>
-    <div class="weatherWidgetRow cloudDiv">
-        <i class="fas fa-cloud fa-3x cloud"></i>
-    </div>
-     <div class="weatherWidgetRow" id="currentTemp">{{WeatherData.temp_celcius}}°</div>
-     <div class="weatherWidgetRow" style="font-size: 16px; margin-top: 40px;">MIN: &emsp; {{WeatherData.temp_min}}° / MAX: &emsp; {{WeatherData.temp_max}}°</div>
-     <div class="weatherWidgetRow" style="font-size: 14px; margin-top: 10px;">Feels Like: &emsp; {{WeatherData.temp_feels_like}}°</div>
-     <div class="weatherWidgetRow" style="font-size: 42px; margin-top: 86px;">{{WeatherData.name}}</div>
-     <div class="weatherWidgetRow" style="font-size: 16px; margin-top: 2px;">Humidity: {{WeatherData.main.humidity}}%</div>
 </div>
