--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
 <div class="app">
-  <header>
-    <div class="searchBox">
-      <input class="inputSearch" type="text" placeholder="Search for a city ...">&emsp;
-  </div>
-  </header>
-  
-  <app-weather-widget-main>Loading Weather Widget, Please Wait <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span></app-weather-widget-main>
+  <app-header></app-header>
+  <router-outlet></router-outlet>
 </div>
