--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,4 +1,3 @@
-<nav>
-    <a [routerLink]="['/']">Current weather</a><br>
-    <a [routerLink]="['forecast']">5 day forecast</a>
-</nav>
+    <nav>
+        | <a [routerLink]="['/']">Main</a>&nbsp;| <a [routerLink]="['testComponent']">New</a> |
+    </nav>
