--- a/src/app/Components/weather-widget-main/weather-widget-main.component.css
+++ b/src/app/Components/weather-widget-main/weather-widget-main.component.css
@@ -62,7 +62,7 @@
     text-shadow: 3px 10px rgba(0,0,0, 0.6);
 }
 
-header input{
+input{
     height: 38px;
     width: 320px;
     border: none;
@@ -76,6 +76,12 @@ header input{
     transition: 0.2s ease-out;
 }
 
-header input:focus{
+input:focus{
     background-color: rgba(255, 255, 255, 0.85);
+}
+
+.rules{
+    text-align: center;
+    margin: 24px;
+    font-size: 20px;
 }
